Made a prototype out of fireplaces so we can finally keep the castle and seaside fireplaces from having divergent changes (hint: they weren't in sync).  Added a change to both that allows them to have an animation without an interactive state, in case we have rare occasions where an NPC is standing in front of a fireplace.  It'd be ideal to have some engine-level solution for this, but that's also dangerous, and this is a cheap/cleanish hack that will address the problem nicely.

--- a/data/level/Arcade/arcade-coin-race-8.cfg
+++ b/data/level/Arcade/arcade-coin-race-8.cfg
@@ -927,7 +927,7 @@
 			"property_data": {
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 256,
 			"y": 608
 		},
