--- a/data/level/Arcade/arcade-the-long-haul.cfg
+++ b/data/level/Arcade/arcade-the-long-haul.cfg
@@ -93,7 +93,7 @@
 			_addr: "0xe37f080",
 			custom: true,
 			label: "_5f763079",
-			type: "fireplace",
+			type: "fireplace_seaside",
 			property_data: {
 				is_burning: true,
 			},
