--- a/data/level/Seaside/crevice-village-house-2.cfg
+++ b/data/level/Seaside/crevice-village-house-2.cfg
@@ -934,7 +934,7 @@
 				"event": "crevice_village_basement_house_fireplace_burning",
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 224,
 			"y": 410
 		},
