--- a/data/level/Seaside/crevice-village-house-3-backroom.cfg
+++ b/data/level/Seaside/crevice-village-house-3-backroom.cfg
@@ -132,7 +132,7 @@
 			"property_data": {
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 384,
 			"y": -1990
 		},
