--- a/data/level/Seaside/crevice-village-house-4.cfg
+++ b/data/level/Seaside/crevice-village-house-4.cfg
@@ -384,7 +384,7 @@
 			"property_data": {
 				"is_burning": false
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 1344,
 			"y": 1312
 		},
