--- a/data/level/Seaside/crevice-village-house-elder.cfg
+++ b/data/level/Seaside/crevice-village-house-elder.cfg
@@ -34,7 +34,7 @@
 			"property_data": {
 				"is_burning": false
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 173,
 			"y": 410
 		},
