--- a/data/level/Seaside/liberated-crevice-village-house-2.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-2.cfg
@@ -110,7 +110,7 @@
 			"property_data": {
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 224,
 			"y": 410
 		},
