--- a/data/level/Seaside/liberated-crevice-village-house-4.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-4.cfg
@@ -81,7 +81,7 @@
 			"property_data": {
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 1344,
 			"y": 1306
 		},
