--- a/data/level/Seaside/secluded-hut-interior.cfg
+++ b/data/level/Seaside/secluded-hut-interior.cfg
@@ -144,7 +144,7 @@
 			"property_data": {
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 608,
 			"y": 506
 		},
