--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -501,7 +501,7 @@
 			"property_data": {
 				"is_burning": true
 			},
-			"type": "fireplace",
+			"type": "fireplace_seaside",
 			"x": 497,
 			"y": -391
 		},
