Sound for when Berd grabs Frogatto in perilous-precipice.

--- a/data/level/Forest/perilous-precipice.cfg
+++ b/data/level/Forest/perilous-precipice.cfg
@@ -336,7 +336,8 @@
 				set(Fake_Berd.relative_x, -15),
 				set(Fake_Berd.relative_y, -20),
 				set(Fake_Berd.facing,1),
-				schedule(30, [ 
+				schedule(30, [
+					sound_falloff('clawed-grasp.wav'),
 					speech_dialog(
 							set(level.player.animation, 'hurt'),
 							level.player,	[~Ow! Hey...~],
