Added blunt damage type, associated sound, and assigned it to a few enemies.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -67,6 +67,8 @@
 								if(damage_amount > 0,
 									switch(damage_type,
 										enum bite, sound_falloff('hurt-bite.wav'),
+										enum blunt,
+											sound_falloff('hurt-blunt.wav'),
 										enum stab, sound_falloff('hurt-stab'+1d2+'.wav'),
 										enum slash, sound_falloff('hurt-slash'+1d3+'.wav'),
 										enum organic_bludgeon, sound_falloff('hurt-organic-bludgeon.wav'),
