--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -595,6 +595,7 @@ properties: {
 	damage_type_to_string: "def(DamageType input) -> string
 						switch(input,
 							enum neutral,			'neutral',
+							enumb blunt,			'blunt',
 							enum none,				'none',
 							enum fire,				'fire',
 							enum ice,				'ice',
@@ -620,6 +621,7 @@ properties: {
 							enum bite,					enum lacerate,
 							enum organic_bludgeon,		enum impact,
 							enum electricity,			enum energy,
+							enum blunt,					enum impact,
 														specific_type				
 						)",  
 
