--- a/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
+++ b/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
@@ -112,6 +112,7 @@ object_type: [
 		traction: 0000,
 		always_active: true,
 		hitpoints: 32,
+		damage_type: "blunt",
 		solid_area: [4,4,8,8],
 		solid_dimensions: ["~thrown"],
 		properties: {
