Fixed some markup for the new blunt hit sfx that was causing them to assert.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -595,7 +595,7 @@ properties: {
 	damage_type_to_string: "def(DamageType input) -> string
 						switch(input,
 							enum neutral,			'neutral',
-							enumb blunt,			'blunt',
+							enum blunt,				'blunt',
 							enum none,				'none',
 							enum fire,				'fire',
 							enum ice,				'ice',
