--- a/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
+++ b/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
@@ -112,7 +112,6 @@ object_type: [
 		traction: 0000,
 		always_active: true,
 		hitpoints: 32,
-		damage_type: "blunt",
 		solid_area: [4,4,8,8],
 		solid_dimensions: ["~thrown"],
 		properties: {
@@ -127,6 +126,7 @@ object_type: [
 			attack_damage: "if(team='evil', if(higher_difficulty, 2, 1), lib.math.round(standard_thrown_damage * 1.5))",
 			damage_cooldown: 5,
 			material_sound: "enum cannon_ball",
+			damage_type: "enum blunt",
 
 
 			title: "~Cannonball~",
