--- a/data/objects/enemies/bugs/hopper_armored.cfg
+++ b/data/objects/enemies/bugs/hopper_armored.cfg
@@ -21,7 +21,7 @@ properties: {
 
 	/*---------------- general properties ----------------*/
 	attack_damage: "if(higher_difficulty,2,1)",
-	damage_type: "blunt",
+	damage_type: "enum blunt",
 	shot_speed: 900,
 	jump_power: "-1000 - 1d1500",
 	to_player: "mid_x-level.player.mid_x",
