Significantly nerfed the default tongue length to a useable, but somewhat claustrophobic length.  This makes the tongue extension upgrades (which are relatively cheap and available early) move from a cute luxury pickup, to a highly desirable upgrade.  This also moves the fairly ugly and somewhat gamebreaking max-length that was achievable before to something much more reasonable.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1728,7 +1728,8 @@ properties: {
 	swim_accel:			"800",
 	swim_accel_diag: 	"565.6",  //this is swim_accel/sqrt(2), by the pythagorean relation
 	
-	tongue_length: "int <- 14 + number_of_item(enum item_tongue_extension)*6",
+	tongue_length: "int <- 8 + number_of_item(enum item_tongue_extension)*4",
+	tongue_duration: "int <- 24",
 	spit_power: "65",
 	posthit_invicibility_period: "50",
 	
@@ -3188,7 +3189,7 @@ object_type: [
 			yhead_offset: "12",
 			ybase_offset: "8",
 			x_offset: "0*facing",
-			tongue_duration: "24",
+			tongue_duration: "_frog.tongue_duration",
 			damage_cooldown: "10",
 			max_swallow_size: "16",
 			min_swallow_size: "10",
