Setting up a new branch for a fire-reskinned version of frogatto's tongue, intended to be a replacement for the fire breath ability.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -13,6 +13,7 @@
 		length: "decimal :: lib.math.length(bounds.x, bounds.y, bounds.x2, bounds.y2)",
 		
 		progression_fraction: {type: "decimal", default: 0},
+		offset_counter: {type: "decimal", default: 0},
 
 #-------------------------- distortion --------------------------#
 		recombine_pairwise: "def([decimal|[decimal,decimal]] list) -> [[decimal, [decimal,decimal]]]
@@ -72,8 +73,9 @@
 		process_wobble: "[
 			set(mid_y, int( (bounds.y2 + bounds.y) / 2) ),
 			set(x, int((bounds.x2 + bounds.x) / 2 - (length/2))),
-			set(draw_area, [0, 0, length/2, img_h/2]),
+			set(draw_area, [offset_counter, 0, length/2, img_h/2]),
 			set(rotate, ( angle(bounds.x, bounds.y, bounds.x2, bounds.y2) ) ),
+			add(offset_counter, -2),
 
 			set(custom_draw, converted_custom_draw_params),
 		]",
