--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3093,15 +3093,22 @@ object_type: [
 
 		},
 		
+		on_end_normal_anim: "animation('normal')",
 			
 		animation: {
-			id: "default",
-			image: "characters/frogatto-tongueC.png",
+			id: "normal",
+//			image: "characters/frogatto-tongueC.png",
+			image: "characters/frogatto-tongue-flame.png",
 			x: 0,
 			y: 0,
-			w: 7,
-			h: 7,
-			frames: 1,
+			w: 31,
+			h: 31,
+//			w: 7,
+//			h: 7,
+			frames: 4,
+			frames_per_row: 1,
+			duration: 3,
+			pad: 0,
 			no_remove_alpha_borders: true,
 		},
 	},
