Added an object for a graphical representation of the base of the tongue.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3175,7 +3175,26 @@ object_type: [
 		],
 	},
 	
-	
+	{
+		id: "tongue_root",
+		serializable: false,
+		
+		properties: {
+			is_player_body_part: true,
+			_tongue_angle: {type: "decimal", default: 0},
+		},
+		
+		on_process: "set(rotate, dump(_tongue_angle))",
+
+		animation: {
+			id: "normal",
+			image: "effects/particles.png",
+			x: 23,
+			y: 197,
+			w: 28,
+			h: 28,
+		},
+	},
 	{
 		id: "tongue_tip",
 		prototype: ["hittable"],
@@ -3294,6 +3313,7 @@ object_type: [
 			_frog: {type: "obj frogatto_playable", persistent: false},
 			_froghead: {type: "obj frogatto_playable.frogatto_head", persistent: false, init: "object('frogatto_playable.frogatto_head', x, mid_y - 12, {facing: facing})" },  #TODO:  this can't be valid here, because it's not from the initialization_map by the time we get here 
 			_shaft: {type: "obj frogatto_playable.tongue_shaft", persistent: false, init: "object('frogatto_playable.tongue_shaft',x,y, {facing: 1})" },
+			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: 1})" },
 		},
 		
 		
@@ -3302,11 +3322,15 @@ object_type: [
 			set(_froghead.facing, facing),
 			add_object(_froghead),
 			add_object(_shaft),
+			add_object(_tongue_root),
 			set(_froghead._tongue_angle, int(_tongue_angle)),
 			set(_froghead.parent,parent),
 			fire_event(_froghead, 'create'),
 			set(_froghead.relative_x,0),
 			set(_froghead.relative_y,-12),
+			set(_tongue_root._tongue_angle, me._tongue_angle),
+			set(_tongue_root.relative_x,0),
+			set(_tongue_root.relative_y, 0),
 			animation('initial'),
 			;
 			process_tongue
@@ -3324,6 +3348,7 @@ object_type: [
 			set(_shaft.hitpoints, 0), 
 			//set(_shaft, null),
 			set(_froghead.hitpoints, 0), 
+			set(_tongue_root.hitpoints, 0), 
 			//set(_froghead, null), 
 			set(_frog._tongue_tip, null), 
 			if((not _swallowed) and _frog.underwater, set(_frog.has_feet, false)),
