Some plumbing to have elemental info passed down to the tongue.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3182,6 +3182,7 @@ object_type: [
 		properties: {
 			is_player_body_part: true,
 			_tongue_angle: {type: "decimal", default: 0},
+			element: { type: "AbiilityElementType", dynamic_initialization: true },
 		},
 		
 		on_process: "set(rotate, dump(_tongue_angle))",
@@ -3219,6 +3220,8 @@ object_type: [
 			damage_cooldown: "10",
 			max_swallow_size: "16",
 			min_swallow_size: "10",
+
+			element: "AbiilityElementType :: enum neutral",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 
@@ -3313,7 +3316,7 @@ object_type: [
 			_frog: {type: "obj frogatto_playable", persistent: false},
 			_froghead: {type: "obj frogatto_playable.frogatto_head", persistent: false, init: "object('frogatto_playable.frogatto_head', x, mid_y - 12, {facing: facing})" },  #TODO:  this can't be valid here, because it's not from the initialization_map by the time we get here 
 			_shaft: {type: "obj frogatto_playable.tongue_shaft", persistent: false, init: "object('frogatto_playable.tongue_shaft',x,y, {facing: 1})" },
-			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: 1})" },
+			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: 1, element: me.element})" },
 		},
 		
 		
@@ -3331,6 +3334,7 @@ object_type: [
 			set(_tongue_root._tongue_angle, me._tongue_angle),
 			set(_tongue_root.relative_x,0),
 			set(_tongue_root.relative_y, 0),
+			//set(_tongue_root.element, me.element),
 			animation('initial'),
 			;
 			process_tongue
