--- a/data/types.cfg
+++ b/data/types.cfg
@@ -44,6 +44,13 @@
 		arcane
 	}",
 
+	AbiilityElementType: "enum {
+		neutral,
+		fire,
+		energy,
+		acid,
+		arcane
+	}",
 
 	InventoryItemType: "enum {
 		item_null,
