--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3090,27 +3090,35 @@ object_type: [
 		
 		properties: {
 			is_player_body_part: true,
+			element: { type: "AbiilityElementType", dynamic_initialization: true },
 
 		},
 		
 		on_end_normal_anim: "animation('normal')",
-			
-		animation: {
-			id: "normal",
-//			image: "characters/frogatto-tongueC.png",
-			image: "characters/frogatto-tongue-flame.png",
+		on_create: "set(animation, enum_to_string(element))",
+
+
+		animation: [{
+			"@base": true,
+			no_remove_alpha_borders: true,
+			image: "characters/tongue-root.png",
 			x: 0,
 			y: 0,
+		},{
+			id: "fire",
+			image: "characters/frogatto-tongue-flame.png",
 			w: 31,
 			h: 31,
-//			w: 7,
-//			h: 7,
 			frames: 4,
 			frames_per_row: 1,
 			duration: 3,
 			pad: 0,
-			no_remove_alpha_borders: true,
-		},
+		},{
+			id: "neutral",
+			image: "characters/frogatto-tongueC.png",
+			w: 7,
+			h: 7,
+		}],
 	},
 	
 	
@@ -3178,6 +3186,8 @@ object_type: [
 	{
 		id: "tongue_root",
 		serializable: false,
+		prototype: ["standard_values"],
+		zsub_order: 7,
 		
 		properties: {
 			is_player_body_part: true,
@@ -3185,16 +3195,26 @@ object_type: [
 			element: { type: "AbiilityElementType", dynamic_initialization: true },
 		},
 		
-		on_process: "set(rotate, dump(_tongue_angle))",
+		on_process: "set(rotate, _tongue_angle)",
 
-		animation: {
-			id: "normal",
-			image: "effects/particles.png",
-			x: 23,
-			y: 197,
-			w: 28,
-			h: 28,
-		},
+		on_create: "set(animation, enum_to_string(element))",
+
+
+		animation: [{
+			"@base": true,
+			no_remove_alpha_borders: true,
+			image: "characters/tongue-root.png",
+			w: 15,
+			h: 15,
+		},{
+			id: "fire",
+			x: 0,
+			y: 0,
+		},{
+			id: "neutral",
+			x: 0,
+			y: 16,
+		}],
 	},
 	{
 		id: "tongue_tip",
@@ -3315,8 +3335,8 @@ object_type: [
 
 			_frog: {type: "obj frogatto_playable", persistent: false},
 			_froghead: {type: "obj frogatto_playable.frogatto_head", persistent: false, init: "object('frogatto_playable.frogatto_head', x, mid_y - 12, {facing: facing})" },  #TODO:  this can't be valid here, because it's not from the initialization_map by the time we get here 
-			_shaft: {type: "obj frogatto_playable.tongue_shaft", persistent: false, init: "object('frogatto_playable.tongue_shaft',x,y, {facing: 1})" },
-			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: 1, element: me.element})" },
+			_shaft: {type: "obj frogatto_playable.tongue_shaft", persistent: false, init: "object('frogatto_playable.tongue_shaft',x,y, {facing: 1, element: me.element})" },
+			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: me.facing, element: me.element, parent: level.player})" },
 		},
 		
 		
@@ -3331,9 +3351,9 @@ object_type: [
 			fire_event(_froghead, 'create'),
 			set(_froghead.relative_x,0),
 			set(_froghead.relative_y,-12),
-			set(_tongue_root._tongue_angle, me._tongue_angle),
+			set(_tongue_root._tongue_angle, me._tongue_angle * facing),
 			set(_tongue_root.relative_x,0),
-			set(_tongue_root.relative_y, 0),
+			set(_tongue_root.relative_y, -4),
 			//set(_tongue_root.element, me.element),
 			animation('initial'),
 			;
