Added code plumbing and graphics for some elemental tongue tips.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3118,6 +3118,11 @@ object_type: [
 			image: "characters/frogatto-tongueC.png",
 			w: 7,
 			h: 7,
+		},{
+			id: "energy",
+			image: "characters/frogatto-tongue-energy.png",
+			w: 31,
+			h: 31,
 		}],
 	},
 	
@@ -3211,6 +3216,10 @@ object_type: [
 			x: 0,
 			y: 0,
 		},{
+			id: "energy",
+			x: 0,
+			y: 16,
+		},{
 			id: "neutral",
 			x: 0,
 			y: 16,
@@ -3241,7 +3250,7 @@ object_type: [
 			max_swallow_size: "16",
 			min_swallow_size: "10",
 
-			element: "AbiilityElementType :: enum neutral",
+			element: "AbiilityElementType :: enum energy",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 
@@ -3354,8 +3363,8 @@ object_type: [
 			set(_tongue_root._tongue_angle, me._tongue_angle * facing),
 			set(_tongue_root.relative_x,0),
 			set(_tongue_root.relative_y, -4),
-			//set(_tongue_root.element, me.element),
-			animation('initial'),
+
+			set(animation, enum_to_string(element)),
 			;
 			process_tongue
 		] asserting parent is obj frogatto_playable",
@@ -3474,14 +3483,18 @@ object_type: [
 				where cld_area = arg.collide_with_area  //protip: INTENTIONALLY abbreviating differently for visual differentiation
 		",
 		
-		on_end_initial_anim: "animation('normal')",
+		on_end_neutral_anim: "animation('normal')",
 		on_end_flash_anim: "animation('normal')",
 		on_end_clung_anim: "animation('clung')",
 		on_end_flashsnag_anim: "animation('clung')",
 		
+		on_end_fire_anim: "animation('fire')",
+		on_end_energy_anim: "animation('energy')",
+
 		animation: [
+			#-------------------------- flesh --------------------------#
 			{
-				id: "initial",
+				id: "neutral",
 				image: "characters/frogatto-spritesheet1.png",
 				frames: 1,
 				duration: 4,
@@ -3517,6 +3530,26 @@ object_type: [
 				duration: 100,
 				rect: [451,351,483,383],
 			},
+
+
+			#-------------------------- elemental --------------------------#
+			{
+				id: "fire",
+				image: "characters/frogatto-tongue-tips.png",
+				frames: 1,
+				duration: 4,
+				rect: [1,1,33,33],
+
+				attack_area: [8,8,25,20,"solid"],
+			},{
+				id: "energy",
+				image: "characters/frogatto-tongue-tips.png",
+				frames: 1,
+				duration: 4,
+				rect: [37,1,69,33],
+
+				attack_area: [8,8,25,20,"solid"],
+			}
 		],
 	},
 
