Made the energy attack tongue into 4 separate frames to fix a bizarre alignment issue.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3098,6 +3098,16 @@ object_type: [
 		on_create: "set(animation, enum_to_string(element))",
 
 
+		on_end_anim: "animation(
+			switch(animation,
+				'energy', 'energy2',
+				'energy2', 'energy3',
+				'energy3', 'energy4',
+				'energy4', 'energy',
+				animation		
+			)
+		)",
+
 		animation: [{
 			"@base": true,
 			no_remove_alpha_borders: true,
@@ -3120,9 +3130,28 @@ object_type: [
 			h: 7,
 		},{
 			id: "energy",
-			image: "characters/frogatto-tongue-energy.png",
+			image: "characters/frogatto-tongue-energy1.png",
 			w: 31,
 			h: 31,
+			duration: 3,
+		},{
+			id: "energy2",
+			image: "characters/frogatto-tongue-energy2.png",
+			w: 31,
+			h: 31,
+			duration: 3,
+		},{
+			id: "energy3",
+			image: "characters/frogatto-tongue-energy3.png",
+			w: 31,
+			h: 31,
+			duration: 3,
+		},{
+			id: "energy4",
+			image: "characters/frogatto-tongue-energy4.png",
+			w: 31,
+			h: 31,
+			duration: 3,
 		}],
 	},
 	
@@ -3325,7 +3354,7 @@ object_type: [
 				adjust_position(_timer,_tongue_angle),
 				if(_timer >= tongue_duration, die()),
 				fire_event('drag_victim'),
-				if(_timer = tongue_duration/2, animation('flash')),
+				if(_timer = tongue_duration/2, [flash_bright, schedule(60, flash_off)]),
 				add(_timer,1)
 				;
 				_shaft.process_wobble
