Added an acid tongue, and wired in support for passing down the element to the tongue's fx holder.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3080,6 +3080,71 @@ variations: {
 
 object_type: [
 	#-------------------------- TONGUE/HEAD --------------------------#
+	
+	
+	{
+		id: "frogatto_head",
+		serializable: false,
+		
+		properties: {
+			is_player_body_part: true,
+			_tongue_angle: {type: "int", default: 0},
+		},
+		
+		on_create: "switch(_tongue_angle,
+						-90,	animation('up'),
+						-45,	animation('updiag'),
+						0,		animation('side'),
+						45,		animation('downdiag'),
+						90,		animation('down'))",
+		
+		animation: [
+			{
+				image: "characters/frogatto-spritesheet5.png",
+				pad: 3,
+				frames: 8,
+				duration: 3,
+				no_remove_alpha_borders: true,
+				id: "up",
+				rect: [2,1,35,26],
+			},{
+				image: "characters/frogatto-spritesheet5.png",
+				pad: 3,
+				frames: 8,
+				duration: 3,
+				no_remove_alpha_borders: true,
+				id: "updiag",
+				rect: [2,30,35,55],
+			},{
+				image: "characters/frogatto-spritesheet5.png",
+				pad: 3,
+				frames: 8,
+				duration: 3,
+				no_remove_alpha_borders: true,
+				id: "side",
+				rect: [2,59,35,84],
+			},{
+				image: "characters/frogatto-spritesheet5.png",
+				pad: 3,
+				frames: 8,
+				duration: 3,
+				no_remove_alpha_borders: true,
+				id: "downdiag",
+				rect: [2,88,35,113],
+			},{
+				image: "characters/frogatto-spritesheet5.png",
+				pad: 3,
+				frames: 8,
+				duration: 3,
+				no_remove_alpha_borders: true,
+				id: "down",
+				rect: [2,117,35,142],
+			},
+		],
+	},
+	
+
+
 	{
 		id: "tongue_shaft",
 		prototype: ["wobbly_rope"],
@@ -3152,71 +3217,15 @@ object_type: [
 			w: 31,
 			h: 31,
 			duration: 3,
+		},{
+			id: "acid",
+			image: "characters/frogatto-tongue-acid1.png",
+			w: 31,
+			h: 31,
+			duration: 3,
 		}],
 	},
-	
-	
-	{
-		id: "frogatto_head",
-		serializable: false,
-		
-		properties: {
-			is_player_body_part: true,
-			_tongue_angle: {type: "int", default: 0},
-		},
-		
-		on_create: "switch(_tongue_angle,
-						-90,	animation('up'),
-						-45,	animation('updiag'),
-						0,		animation('side'),
-						45,		animation('downdiag'),
-						90,		animation('down'))",
-		
-		animation: [
-			{
-				image: "characters/frogatto-spritesheet5.png",
-				pad: 3,
-				frames: 8,
-				duration: 3,
-				no_remove_alpha_borders: true,
-				id: "up",
-				rect: [2,1,35,26],
-			},{
-				image: "characters/frogatto-spritesheet5.png",
-				pad: 3,
-				frames: 8,
-				duration: 3,
-				no_remove_alpha_borders: true,
-				id: "updiag",
-				rect: [2,30,35,55],
-			},{
-				image: "characters/frogatto-spritesheet5.png",
-				pad: 3,
-				frames: 8,
-				duration: 3,
-				no_remove_alpha_borders: true,
-				id: "side",
-				rect: [2,59,35,84],
-			},{
-				image: "characters/frogatto-spritesheet5.png",
-				pad: 3,
-				frames: 8,
-				duration: 3,
-				no_remove_alpha_borders: true,
-				id: "downdiag",
-				rect: [2,88,35,113],
-			},{
-				image: "characters/frogatto-spritesheet5.png",
-				pad: 3,
-				frames: 8,
-				duration: 3,
-				no_remove_alpha_borders: true,
-				id: "down",
-				rect: [2,117,35,142],
-			},
-		],
-	},
-	
+
 	{
 		id: "tongue_root",
 		serializable: false,
@@ -3246,6 +3255,14 @@ object_type: [
 			y: 0,
 		},{
 			id: "energy",
+			x: 16,
+			y: 16,
+		},{
+			id: "acid",
+			x: 16,
+			y: 16,
+		},{
+			id: "arcane",
 			x: 0,
 			y: 16,
 		},{
@@ -3254,6 +3271,83 @@ object_type: [
 			y: 16,
 		}],
 	},
+	{
+		id: "tongue_fx_holder",
+		prototype: ["effects_attache"],
+		serializable: false,
+
+		properties: {
+		#-------------------------- constructor/destructor --------------------------#
+			do_setup: "[
+				add_object(light_circular),
+
+				switch(element,
+					enum fire, add_object(fire_particles),
+					enum energy, add_object(energy_particles),
+					enum acid, add_object(acid_particles),
+				),
+			]",
+			
+
+		#-------------------------- custom behavior --------------------------#
+			element: { type: "AbiilityElementType", dynamic_initialization: true },
+		
+		#-------------------------- attaches --------------------------#
+			fire_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'smoky_fire_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'fire_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
+
+			energy_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'energy_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'energy_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
+
+			acid_particles: {
+				type: "obj particle_attache",
+				init: "object('particle_attache', {
+					_particle_type: 'acid_spray',
+					x: mid_x,
+					y: mid_y,
+					parent: me,
+					facing: me.facing,
+					time_to_die: 20,
+				})",
+				persistent: false,
+			},
+
+
+			light_circular: {
+				type: "obj light_source_attache",
+				init: "object('light_source_attache', mid_x, mid_y, {
+					_sprite_type: enum eased_halo,
+					time_to_die: 0,
+					parent: me,
+					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
+					scale: 1.0,
+					variable_name: 'light_circular',
+				})",
+				persistent: false,
+			},
+
+		}
+
+	},
+
 	{
 		id: "tongue_tip",
 		prototype: ["hittable"],
@@ -3279,7 +3373,7 @@ object_type: [
 			max_swallow_size: "16",
 			min_swallow_size: "10",
 
-			element: "AbiilityElementType :: enum energy",
+			element: "AbiilityElementType :: enum fire",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 
@@ -3354,14 +3448,36 @@ object_type: [
 				adjust_position(_timer,_tongue_angle),
 				if(_timer >= tongue_duration, die()),
 				fire_event('drag_victim'),
-				if(_timer = tongue_duration/2, [flash_bright, schedule(60, flash_off)]),
+				if(_timer = tongue_duration/2, [flash_bright, schedule(4, flash_off)]),
 				add(_timer,1)
 				;
 				_shaft.process_wobble
 			]",
 			
 			anchor_pos: "{x: level.player.mid_x, y: level.player.mid_y - 12}",
-			
+
+
+
+			#-------------------------- compound objects --------------------------#
+			_frog: {type: "obj frogatto_playable", persistent: false},
+
+			_froghead: {type: "obj frogatto_playable.frogatto_head", persistent: false, init: "object('frogatto_playable.frogatto_head', x, mid_y - 12, {facing: facing})" },  #TODO:  this can't be valid here, because it's not from the initialization_map by the time we get here 
+
+			_shaft: {type: "obj frogatto_playable.tongue_shaft", persistent: false, init: "object('frogatto_playable.tongue_shaft',x,y, {facing: 1, element: me.element})" },
+
+			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: me.facing, element: me.element, parent: level.player})" },
+
+			fx_holder: {
+				type: "obj frogatto_playable.tongue_fx_holder",
+				init: "object('frogatto_playable.tongue_fx_holder', mid_x, mid_y, {
+					time_to_die: 0,
+					parent: me,
+					element: me.element,
+					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
+				})",
+				persistent: false,
+			},
+
 			#-------------------------- vars --------------------------#
 			_progression: {type: "decimal", default: 0},
 			_timer: {type: "int", default: 1},
@@ -3371,16 +3487,13 @@ object_type: [
 			_swallowed: {type: "obj throwable|null", default: null},
 			_cycle_grabbed: {type: "int|null", default: null},
 
-			_frog: {type: "obj frogatto_playable", persistent: false},
-			_froghead: {type: "obj frogatto_playable.frogatto_head", persistent: false, init: "object('frogatto_playable.frogatto_head', x, mid_y - 12, {facing: facing})" },  #TODO:  this can't be valid here, because it's not from the initialization_map by the time we get here 
-			_shaft: {type: "obj frogatto_playable.tongue_shaft", persistent: false, init: "object('frogatto_playable.tongue_shaft',x,y, {facing: 1, element: me.element})" },
-			_tongue_root: {type: "obj frogatto_playable.tongue_root", persistent: false, init: "object('frogatto_playable.tongue_root',mid_x,mid_y, {facing: me.facing, element: me.element, parent: level.player})" },
 		},
 		
 		
 		on_spawned: "set(parent, arg.spawner)",
 		on_create:  "[
 			set(_froghead.facing, facing),
+			add_object(fx_holder),
 			add_object(_froghead),
 			add_object(_shaft),
 			add_object(_tongue_root),
@@ -3576,6 +3689,14 @@ object_type: [
 				frames: 1,
 				duration: 4,
 				rect: [37,1,69,33],
+
+				attack_area: [8,8,25,20,"solid"],
+			},{
+				id: "acid",
+				image: "characters/frogatto-tongue-tips.png",
+				frames: 1,
+				duration: 4,
+				rect: [73,1,105,33],
 
 				attack_area: [8,8,25,20,"solid"],
 			}
