Added graphics for an arcane tongue.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3223,6 +3223,12 @@ object_type: [
 			w: 31,
 			h: 31,
 			duration: 3,
+		},{
+			id: "arcane",
+			image: "characters/frogatto-tongue-arcane1.png",
+			w: 31,
+			h: 31,
+			duration: 3,
 		}],
 	},
 
@@ -3263,8 +3269,8 @@ object_type: [
 			y: 16,
 		},{
 			id: "arcane",
-			x: 0,
-			y: 16,
+			x: 32,
+			y: 0,
 		},{
 			id: "neutral",
 			x: 0,
@@ -3285,6 +3291,7 @@ object_type: [
 					enum fire, add_object(fire_particles),
 					enum energy, add_object(energy_particles),
 					enum acid, add_object(acid_particles),
+					enum arcane, add_object(arcane_particles),
 				),
 			]",
 			
@@ -3330,6 +3337,17 @@ object_type: [
 				persistent: false,
 			},
 
+			arcane_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'arcane_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'arcane_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
 
 			light_circular: {
 				type: "obj light_source_attache",
@@ -3373,7 +3391,7 @@ object_type: [
 			max_swallow_size: "16",
 			min_swallow_size: "10",
 
-			element: "AbiilityElementType :: enum fire",
+			element: "AbiilityElementType :: enum arcane",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 
@@ -3697,6 +3715,14 @@ object_type: [
 				frames: 1,
 				duration: 4,
 				rect: [73,1,105,33],
+
+				attack_area: [8,8,25,20,"solid"],
+			},{
+				id: "arcane",
+				image: "characters/frogatto-tongue-tips.png",
+				frames: 1,
+				duration: 4,
+				rect: [109,1,141,33],
 
 				attack_area: [8,8,25,20,"solid"],
 			}
