(UNUSED) sounds for clicking buttons in menus.

--- a/data/objects/props-interactive/misc/pressure_plate_metal.cfg
+++ b/data/objects/props-interactive/misc/pressure_plate_metal.cfg
@@ -1,7 +1,7 @@
 {
 id: "pressure_plate_metal",
 prototype: ["pressure_plate"],
-
+on_pressed: "play_sound__falloff('metal-pressure-plate'+1d3+'.wav')",
 animation: [
 	{
 		id: "normal",
@@ -10,6 +10,7 @@ animation: [
 	},
 	{
 		id: "pushed",
+		events: "0:pressed",
 		image: "props/interactive-props.png",
 		rect: [48,121,95,143],
 	},
