Further revisions to the fire tongue graphics.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -143,6 +143,7 @@ properties: {
 		'energy_shot_contrail': ['energy_shot_contrail'],
 		'arcane_shot_contrail': ['arcane_shot_contrail'],
 		'acid_shot_contrail': ['acid_motes_small'],
+		'fire_tongue_contrail': ['1_fire_sparks','2_fire_med', '0_fire_smoke', '3_fire_bright'],
 		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
 		'electric_sparks_dancing': ['electric_sparks', 'electric_sparks_small', 'blue_energy_motes_small'],
 	}",
