--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3169,6 +3169,10 @@ object_type: [
 				'energy2', 'energy3',
 				'energy3', 'energy4',
 				'energy4', 'energy',
+				'fire', 'fire2',
+				'fire2', 'fire3',
+				'fire3', 'fire4',
+				'fire4', 'fire',
 				animation		
 			)
 		)",
@@ -3181,13 +3185,28 @@ object_type: [
 			y: 0,
 		},{
 			id: "fire",
-			image: "characters/frogatto-tongue-flame.png",
+			image: "characters/frogatto-tongue-fire1.png",
 			w: 31,
 			h: 31,
-			frames: 4,
-			frames_per_row: 1,
 			duration: 3,
-			pad: 0,
+		},{
+			id: "fire2",
+			image: "characters/frogatto-tongue-fire2.png",
+			w: 31,
+			h: 31,
+			duration: 3,
+		},{
+			id: "fire3",
+			image: "characters/frogatto-tongue-fire3.png",
+			w: 31,
+			h: 31,
+			duration: 3,
+		},{
+			id: "fire4",
+			image: "characters/frogatto-tongue-fire4.png",
+			w: 31,
+			h: 31,
+			duration: 3,
 		},{
 			id: "neutral",
 			image: "characters/frogatto-tongueC.png",
@@ -3303,7 +3322,7 @@ object_type: [
 			fire_particles: {
 				type: "obj legacy_particle_attache",
 				init: "object('legacy_particle_attache', mid_x, mid_y, {
-					_particle_type: 'smoky_fire_shot_contrail',
+					_particle_type: 'fire_tongue_contrail',
 					parent: me,
 					time_to_die: 50,
 					variable_name: 'fire_particles',
@@ -3391,7 +3410,7 @@ object_type: [
 			max_swallow_size: "16",
 			min_swallow_size: "10",
 
-			element: "AbiilityElementType :: enum arcane",
+			element: "AbiilityElementType :: enum fire",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 
