Sounds for stepping on wooden pressure plates.

--- a/data/objects/props-interactive/misc/pressure_plate_wooden.cfg
+++ b/data/objects/props-interactive/misc/pressure_plate_wooden.cfg
@@ -1,7 +1,7 @@
 {
 id: "pressure_plate_wooden",
 prototype: ["pressure_plate"],
-
+on_pressed: "play_sound__falloff('wooden-pressure-plate'+1d4+'.wav')",
 animation: [
 	{
 		id: "normal",
@@ -11,6 +11,7 @@ animation: [
 	},
 	{
 		id: "pushed",
+		events: "0:pressed",
 		image: "props/interactive-props.png",
 		rect: [48,98,95,120],
 		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
