Wired in the new pressure-plate sounds.

--- a/data/objects/props-interactive/misc/pressure_plate_metal.cfg
+++ b/data/objects/props-interactive/misc/pressure_plate_metal.cfg
@@ -1,7 +1,13 @@
 {
 id: "pressure_plate_metal",
 prototype: ["pressure_plate"],
-on_pressed: "play_sound__falloff('metal-pressure-plate'+1d3+'.wav')",
+
+properties: {
+#-------------------------- pullable logic --------------------------#
+	visually_turn_on: "[play_sound__falloff('pressure-plate-pressed-metal'), set(animation, 'pushed')]",
+	visually_turn_off: "[play_sound__falloff('pressure-plate-depressed-metal'), set(animation, 'normal')]",
+},
+
 animation: [
 	{
 		id: "normal",
@@ -10,7 +16,6 @@ animation: [
 	},
 	{
 		id: "pushed",
-		events: "0:pressed",
 		image: "props/interactive-props.png",
 		rect: [48,121,95,143],
 	},
