--- a/data/objects/props-interactive/misc/pressure_plate_wooden.cfg
+++ b/data/objects/props-interactive/misc/pressure_plate_wooden.cfg
@@ -1,7 +1,13 @@
 {
 id: "pressure_plate_wooden",
 prototype: ["pressure_plate"],
-on_pressed: "play_sound__falloff('wooden-pressure-plate'+1d4+'.wav')",
+
+properties: {
+#-------------------------- pullable logic --------------------------#
+	visually_turn_on: "[play_sound__falloff('pressure-plate-pressed-wooden'), set(animation, 'pushed')]",
+	visually_turn_off: "[play_sound__falloff('pressure-plate-depressed-wooden'), set(animation, 'normal')]",
+},
+
 animation: [
 	{
 		id: "normal",
@@ -11,7 +17,6 @@ animation: [
 	},
 	{
 		id: "pushed",
-		events: "0:pressed",
 		image: "props/interactive-props.png",
 		rect: [48,98,95,120],
 		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
