Tidied up the particles for the flame-tongue.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1727,8 +1727,9 @@ properties: {
 	run_accel:			"2240",
 	swim_accel:			"800",
 	swim_accel_diag: 	"565.6",  //this is swim_accel/sqrt(2), by the pythagorean relation
-	
-	tongue_length: "int <- 8 + number_of_item(enum item_tongue_extension)*4",
+
+	default_tongue_length: "int :: 8",
+	tongue_length: "int <- default_tongue_length + number_of_item(enum item_tongue_extension)*4",
 	tongue_duration: "int <- 24",
 	spit_power: "65",
 	posthit_invicibility_period: "50",
@@ -3311,12 +3312,20 @@ object_type: [
 					enum energy, add_object(energy_particles),
 					enum acid, add_object(acid_particles),
 					enum arcane, add_object(arcane_particles),
-				),
+				)
+				;
+				[
+					fire_particles.turn_on,
+					energy_particles.turn_on,
+					acid_particles.turn_on,
+					arcane_particles.turn_on,
+				]
 			]",
 			
 
 		#-------------------------- custom behavior --------------------------#
 			element: { type: "AbiilityElementType", dynamic_initialization: true },
+			length_multiplier: { type: "decimal", dynamic_initialization: true },
 		
 		#-------------------------- attaches --------------------------#
 			fire_particles: {
@@ -3327,6 +3336,35 @@ object_type: [
 					time_to_die: 50,
 					variable_name: 'fire_particles',
 					zsub_order: -1,
+
+					customized_spawn_rects: [{
+						particle_id: '3_fire_bright',
+						rect: [ -7, 7, -10, 3 ],
+					},{
+						particle_id: '2_fire_med',
+						rect: [ -5, 5, -5, 5 ],
+					},{
+						particle_id: '1_fire_sparks',
+						rect: [ -5, 5, -5, 5 ],
+					},{
+						particle_id: '0_fire_smoke',
+						rect: [ -5, 5, -5, 5 ],
+					}],
+
+					customized_spawn_rates: [{
+						particle_id: '3_fire_bright',
+						magnitude: 400 * length_multiplier,
+					},{
+						particle_id: '2_fire_med',
+						magnitude: 200 * length_multiplier,
+					},{
+						particle_id: '1_fire_sparks',
+						magnitude: 300 * length_multiplier,
+					},{
+						particle_id: '0_fire_smoke',
+						magnitude: 200 * length_multiplier,
+					}],
+
 				})",
 				persistent: false,
 			},
@@ -3413,6 +3451,7 @@ object_type: [
 			element: "AbiilityElementType :: enum fire",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
+			length_multiplier: "decimal :: _frog.tongue_length / _frog.default_tongue_length",
 
 			set_shaft: "def(int time, decimal angle, decimal duration) -> commands [
 				set(_shaft.bounds,
@@ -3511,6 +3550,7 @@ object_type: [
 					parent: me,
 					element: me.element,
 					custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
+					length_multiplier: me.length_multiplier,
 				})",
 				persistent: false,
 			},
