Wired in basic elemental damage to the elemental tongues.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3435,21 +3435,37 @@ object_type: [
 
 		
 		properties: {
+		#-------------------------- hittable metadata --------------------------#
 			is_player_body_part: true,
 			has_mini_hp_bar: "bool :: false",
 
-			attack_damage: "0",
+
+
+		#-------------------------- damage metadata --------------------------#
+			element: "AbiilityElementType :: enum fire",
+			damage_type: "me.element",
+			damage_cooldown: "30",
+			attack_damage: "switch(element,
+				enum fire, 20,
+				enum energy, 20,
+				enum acid, 20,
+				enum arcane, 20,
+				0
+			)
+			",
 			team: "'player'",
+			
+			
+		#-------------------------- positioning metadata --------------------------#
 			yhead_offset: "12",
 			ybase_offset: "8",
 			x_offset: "0*facing",
 			tongue_duration: "_frog.tongue_duration",
-			damage_cooldown: "10",
 			max_swallow_size: "16",
 			min_swallow_size: "10",
+			
 
-			element: "AbiilityElementType :: enum fire",
-
+		#-------------------------- core behavior --------------------------#
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 			length_multiplier: "decimal :: _frog.tongue_length / _frog.default_tongue_length",
 
@@ -3534,7 +3550,7 @@ object_type: [
 
 
 
-			#-------------------------- compound objects --------------------------#
+		#-------------------------- compound objects --------------------------#
 			_frog: {type: "obj frogatto_playable", persistent: false},
 
 			_froghead: {type: "obj frogatto_playable.frogatto_head", persistent: false, init: "object('frogatto_playable.frogatto_head', x, mid_y - 12, {facing: facing})" },  #TODO:  this can't be valid here, because it's not from the initialization_map by the time we get here 
@@ -3555,7 +3571,7 @@ object_type: [
 				persistent: false,
 			},
 
-			#-------------------------- vars --------------------------#
+		#-------------------------- vars --------------------------#
 			_progression: {type: "decimal", default: 0},
 			_timer: {type: "int", default: 1},
 			_tongue_angle: {type: "decimal", default: 0},
