Item definitions for some core elements.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -217,6 +217,55 @@
 	},
 	
 	
+#-------------------------- core elemental unlocks --------------------------#	
+	{
+		name: "~Sidereal Hearth~",
+		id: "@eval enum item_fire_element",
+		description: "~The warmth of all the stars echoes in this stone.~",
+		short_store_description: "[~Gives you the ability to conjure fire.~]",
+		costs_trophies_instead_of_coins: true,
+		count_limit: 1,
+		item_category: "@eval enum core_element",
+		anim_rect: [160,118,180,138],
+		hud_img_rect: [126, 126, 165,165],
+		item_element_type: "@eval enum fire",
+	},
+	{
+		name: "~Vitalic Conduit~",
+		id: "@eval enum item_energy_element",
+		description: "~A stone coursing with the motive force of the universe.~",
+		short_store_description: "[~Gives you the ability to conjure energy.~]",
+		costs_trophies_instead_of_coins: true,
+		count_limit: 1,
+		item_category: "@eval enum core_element",
+		anim_rect: [160,166,180,186],
+		hud_img_rect: [84, 126, 123,165],
+		item_element_type: "@eval enum energy",
+	},
+	{
+		name: "~Numinous Lens~",
+		id: "@eval enum item_arcane_element",
+		description: "~A catalyst for the hidden shape of reality.~",
+		short_store_description: "[~Gives you the ability to conjure the arcane.~]",
+		costs_trophies_instead_of_coins: true,
+		count_limit: 1,
+		item_category: "@eval enum core_element",
+		anim_rect: [160,94,180,114],
+		hud_img_rect: [42, 126, 81,165],
+		item_element_type: "@eval enum arcane",
+	},
+	{
+		name: "~Lurid Wash~",
+		id: "@eval enum item_super_acid_pendant",
+		description: "~The essence of nature's fecund and plasmic qualities.~",
+		short_store_description: "[~Gives you the ability to conjure acid.~]",
+		costs_trophies_instead_of_coins: true,
+		count_limit: 1,
+		item_category: "@eval enum core_element",
+		anim_rect: [160,142,180,162],
+		hud_img_rect: [168, 126, 207,165],
+		item_element_type: "@eval enum acid",
+	},
 	
 	
 	
