Item definitions for some core elements.

--- a/data/types/hittable_info_types.cfg
+++ b/data/types/hittable_info_types.cfg
@@ -30,7 +30,7 @@
 
 
 
-	ItemCategory: "enum { passive, primary_ability, super_ability, underwater_ability, secondary_item, trophy }",
+	ItemCategory: "enum { passive, core_element, primary_ability, super_ability, underwater_ability, secondary_item, trophy }",
 	
 /*
 	Material sounds are currently used for two things - sounds when the player 'footfalls' onto the ground, and sounds when a thrown object collides with the ground.
